--- a/CebollitasITBA/dolarsi.css
+++ b/CebollitasITBA/dolarsi.css
@@ -1,5 +1,5 @@
 #tituloh5 {
-  background-color: gray;
+  background-color: rgb(160, 160, 160);
 }
 
 #texto1 {
@@ -22,18 +22,7 @@
   border-radius: 4px;
 }
 
-#venta {
-  background-color: rgb(216, 216, 216);
-  size: 15px;
-  font-size: medium;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-  padding: 10px;
-  position: relative;
-  width: 144px;
-  display: inline-block;
-  margin-left: -2px;
-}
-#actualizado {
+.actualizado {
   background-color: rgb(239, 237, 237);
   size: 15px;
   font-size: small;
@@ -41,3 +30,52 @@
   padding: 10px;
   position: relative;
 }
+
+* {
+  font-family: "Inter", sans-serif;
+  margin: 0;
+}
+
+.wraper {
+  min-height: 100%;
+  position: relative;
+  float: left;
+  width: 100%;
+}
+.menu {
+  position: sticky;
+}
+.menu li {
+  width: fit-content;
+  background-color: rgb(48, 48, 49);
+  font-size: large;
+  font-weight: bold;
+  color: rgb(255, 255, 255);
+  text-decoration: none;
+  height: 1000px;
+  text-align: center;
+}
+.menu li ul a {
+  text-decoration: none;
+  color: rgb(255, 255, 255);
+}
+.menu li ul {
+  padding: 0;
+  padding-top: 20px;
+}
+.nav {
+  padding-top: 20px;
+  margin-top: -30px;
+  width: fit-content;
+  float: left;
+}
+
+.menu li ul:hover > a {
+  color: rgb(0, 119, 255);
+}
+
+#iniciar {
+  float: right;
+  position: flex;
+}
+
