agrego funciones para login, trabajamos todos atravez de meet

--- a/itbank/Login/Templates/Login/login.html
+++ b/itbank/Login/Templates/Login/login.html
@@ -6,13 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ITBANK</title>
-    <link rel="stylesheet" href="{% static 'Login/css/login_style.css' %}">
+    <link rel="stylesheet" href="{% static 'login/css/login_style.css' %}">
 </head>
 <body class="contenedor">
 
     <div class="cuadro">
         <center>
-        <img class="imagen"src="{% static 'prueba/img/CustomLoginLogo.jpg' %}" alt="" width="240" height="80">   
+        <img class="imagen"src="{% static 'login/img/CustomLoginLogo.jpg' %}" alt="" width="240" height="80">   
            
         <ul class="relleno">
             
@@ -27,6 +27,9 @@
             </li>
             <li>
                 <button type="submit" class="boton">Iniciar sesión</button>
+            </li>
+            <li>
+                <button type="sumbit" class="boton"><a href="% url 'registrarse' %">Registrarse</a></button>
             </li>
         </ul> 
         <div >
