--- a/itbank/login/Templates/login/registro.html
+++ b/itbank/login/Templates/login/registro.html
@@ -6,27 +6,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ITBANK</title>
-    <link rel="stylesheet" href="{% static 'prueba/css/login_style.css' %}">
+    <link rel="stylesheet" href="{% static 'login/css/login_style.css' %}">
 </head>
 <body class="contenedor">
 
     <div class="cuadro">
         <center>
-        <img class="imagen"src="{% static 'prueba/img/CustomLoginLogo.jpg' %}" alt="" width="240" height="80">   
+        <img class="imagen"src="{% static 'login/img/CustomLoginLogo.jpg' %}" alt="" width="240" height="80">   
            
         <ul class="relleno">
             
             <li>
                 <label >Nombre de Usuario:</label><br>
-                <input type="text" class="box" placeholder="Usuario" maxlength="" requiered></input>
+                <input type="text" class="box" name="correo" placeholder="Usuario" maxlength="" requiered></input>
             </li>
 
             <li>
                 <label >Contraseña:</label><br>
-                <input type="password" class="box" placeholder="Contraseña" maxlength="" requiered></input>
+                <input type="password" class="box" name="password" placeholder="Contraseña" maxlength="" requiered></input>
             </li>
+            
             <li>
-                <button type="submit" class="boton">Iniciar sesión</button>
+                <button type="sumbit" class="boton">Registrarse</button>
             </li>
         </ul> 
         <div >
