--- a/itbank/Login/Templates/Login/login.html
+++ b/itbank/Login/Templates/Login/login.html
@@ -9,10 +9,15 @@
     <link rel="stylesheet" href="{% static 'login/css/login_style.css' %}">
 </head>
 <body class="contenedor">
-
+    <header>
+            <img src="{% static 'Login/img/logoITBANK.png' %}" alt="Logo ITBANK" />
+            <a id="Cuenta" href="/registro">Crear cuenta</a>
+            <a id="Home" href="/home">Inicio</a>
+    </header> 
     <div class="cuadro">
+         
         <center>
-        <img class="imagen"src="{% static 'login/img/CustomLoginLogo.jpg' %}" alt="" width="240" height="80">   
+             
            
         <ul class="relleno">
             
@@ -28,9 +33,7 @@
             <li>
                 <button type="submit" class="boton">Iniciar sesión</button>
             </li>
-            <li>
-                <button type="sumbit" class="boton"><a href="% url 'registrarse' %">Registrarse</a></button>
-            </li>
+           
         </ul> 
         <div >
             <a class="nueva-contrasena" href="">
