--- a/itbank/home/Templates/home/index.html
+++ b/itbank/home/Templates/home/index.html
@@ -31,6 +31,7 @@
         <a class="nav-link" href="{% url 'logout' %}">Salir</a>
       </li>
       {% endif %}
+      <p>{{hola user.get_username }}</p>
     </header>
     <div id="espacio"></div>
     <main>
