relacion entre paginas

--- a/itbank/Cuenta/templates/Cuenta/dolarsi.html
+++ b/itbank/Cuenta/templates/Cuenta/dolarsi.html
@@ -46,13 +46,13 @@
               style="width: 200px; padding-right: -10px"
             />
             <ul>
-              <a href="index.html">INICIO</a>
+              <a href="http://127.0.0.1:8000/">INICIO</a>
             </ul>
             <ul>
               <a href="">TARJETA</a>
             </ul>
             <ul>
-              <a href="">PRESTAMOS</a>
+              <a href="http://127.0.0.1:8000/Prestamos/">PRESTAMOS</a>
             </ul>
             <ul>
               <a href="">INVERSIONES</a>
@@ -61,7 +61,7 @@
               <a href="Beneficios/index.html">BENEFICIOS</a>
             </ul>
             <ul>
-              <a href="dolarsi.html">DOLARSI</a>
+              <a href="">DOLARSI</a>
             </ul>
             <ul>
               <a href="">AYUDA</a>
