--- a/itbank/home/Templates/index.html
+++ b/itbank/home/Templates/index.html
@@ -49,7 +49,7 @@
           ><span class="material-symbols-outlined"> credit_score </span
           >Tarjeta</a
         >
-        <a id="prestamos" href=""
+        <a id="prestamos" href="http://127.0.0.1:8000/Prestamos/"
           ><span class="material-symbols-outlined"> monetization_on </span
           >Préstamos</a
         >
@@ -57,7 +57,7 @@
           ><span class="material-symbols-outlined"> trending_up </span
           >Inversiones</a
         >
-        <a id="seguros" href="dolarsi.html"
+        <a id="seguros" href="http://127.0.0.1:8000/Cuenta/"
           ><span class="material-symbols-outlined"> real_estate_agent </span
           >DolarSi</a
         >
