--- a/itbank/home/Templates/index.html
+++ b/itbank/home/Templates/index.html
@@ -132,7 +132,7 @@
                   data-bs-toggle="collapse"
                   data-bs-target="#question-three"
                 >
-                  Pregunta numero tres
+                  ¿Tiene algún costo ser cliente de ITBANK?
                 </button>
               </h2>
               <div
@@ -142,10 +142,7 @@
                 data-bs-parent="#questions"
               >
                 <div class="accordion-body">
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi
-                  voluptatem iusto blanditiis illum beatae deleniti sed
-                  similique ab et praesentium. Totam dolorum necessitatibus
-                  mollitia nihil ratione aut, voluptates numquam et.
+                  Lo único que cobraremos será el mantenimiento de las tarjetas de crédito si decidís pedirlas
                 </div>
               </div>
             </div>
@@ -282,7 +279,7 @@
         <li><h4>Redes sociales</h4></li>
         <li><img src="{% static 'home/logos/logoface.png' %}" alt="Logo Facebook"width="20px"><a href="https://facebook.com">  Facebook</a></li>
         <li><img src="{% static 'home/logos/logoinsta.png' %}" alt="Logo Instagram" width="20px"><a href="https://instagram.com">  Instagram</a></li>
-        <li><img src="{% static 'home/logos/logotwitter.png' %}l" alt="Logo Twitter"width="20px"><a href="https://twitter.com">  Twitter</a></li>
+        <li><img src="{% static 'home/img/logotwitter.png'%}" alt="Logo Twitter"width="20px"><a href="https://twitter.com">  Twitter</a></li>
       </ul>
 
       <iframe
