--- a/itbank/Cuenta/templates/Cuenta/dolarsi.html
+++ b/itbank/Cuenta/templates/Cuenta/dolarsi.html
@@ -36,6 +36,26 @@
     ></script>
   </head>
   <body>
+    <nav class="navbar bg-light" style="width: 100%">
+      <div class="container-fluid" style="width: 100%">
+        <a class="navbar-brand" style="text-decoration: none; color: black"
+          >ITBANK</a
+        >
+        {% if request.user.is_authenticated %}
+
+        <a class="btn btn-outline-success" href="{% url 'logout' %}"
+          >Cerrar sesion</a
+        >
+
+        {% else %}
+        <a class="btn btn-outline-success bg-primary" href="{% url 'logout' %}"
+          >Entrar</a
+        >
+
+        {% endif %}
+        <p class="h3" style="margin-right: 20px">{{user.get_username }}</p>
+      </div>
+    </nav>
     <header>
       <nav class="nav">
         <div class="menu">
@@ -49,22 +69,7 @@
               <a href="http://127.0.0.1:8000/">INICIO</a>
             </ul>
             <ul>
-              <a href="">TARJETA</a>
-            </ul>
-            <ul>
-              <a href="http://127.0.0.1:8000/Prestamos/">PRESTAMOS</a>
-            </ul>
-            <ul>
-              <a href="">INVERSIONES</a>
-            </ul>
-            <ul>
-              <a href="Beneficios/index.html">BENEFICIOS</a>
-            </ul>
-            <ul>
-              <a href="">DOLARSI</a>
-            </ul>
-            <ul>
-              <a href="">AYUDA</a>
+              <a href="http://127.0.0.1:8000/prestamos/">PRESTAMOS</a>
             </ul>
           </li>
         </div>
