--- a/itbank/home/static/home/css/EstilosHeader.css
+++ b/itbank/home/static/home/css/EstilosHeader.css
@@ -1,14 +1,15 @@
-* {
+/* * {
   margin: 0;
 }
 
 header {
-  display: grid;
-  grid-template-columns: repeat(12, 1fr);
+  height: 800px;
+  display: flex;
+  flex-direction: row;
   background-color: white;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 15px;
-  height: 80px;
+  height: 800px;
   width: 100%;
   position: fixed;
   z-index: 100;
@@ -53,10 +54,10 @@ header img {
 }
 
 #Cuenta:hover {
-  color: rgb(57, 166, 255);
+  color: rgb(87, 179, 255);
 }
 #Home:hover {
-  /* background-color: blue; */
+  background-color: blue;
   background-color: rgb(57, 166, 255);
   color: white;
   transition-duration: 300ms;
@@ -72,7 +73,6 @@ header img {
   #espacio {
     height: 50px;
     width: 100%;
-    background-color: aqua;
   }
   #Cuenta {
     grid-column: 10/12;
@@ -91,3 +91,4 @@ header img {
     transition-duration: 100ms;
   }
 }
+ */
