--- a/itbank/registration/Templates/registration/login.html
+++ b/itbank/registration/Templates/registration/login.html
@@ -1,37 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="Main.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css" />
+    <link rel="stylesheet" href="Main.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css"
+    />
     <link rel="stylesheet" href="Main.css" />
     <title>ITBANK</title>
-</head>
-<body>
+  </head>
+  <nav>
+    <nav class="navbar bg-light" style="width: 100%">
+      <div class="container-fluid" style="width: 100%">
+        <a class="navbar-brand" href="../..">ITBANK</a>
+        {% if request.user.is_authenticated %} {% endif %}
+        <p class="h3" style="margin-right: 20px">{{user.get_username }}</p>
+      </div>
+    </nav>
+  </nav>
+  <body>
     <div class="container">
-        <div class="row mt-3">
-            <div class="col-md 9 mx-auto mb-5">
-                <form action="" method="post">{% csrf_token %}
-                    <h3 class="mb-4">Iniciar sesion</h3>
-                    {% if form.non_field_errors %}
-                        <p style="color:red;">Usuario o contraseña incorrectos</p>
-                    {% endif %}
-                    <p>
-                        <input type="text" name="username" autofocus maxlength="254" required id="id_username"
-                         class="form-control" placeholder="Nombre de usuario">
-                    </p>
-                    <p>
-                        <input type="password" name="password" required id="id_password" class="form-control"
-                        placeholder="contraseña">
-                    </p>
-                    <p><input type="submit" class="btn btn-primary btn-block" value="Acceder"></p>
-                </form>
-            </div>
+      <div class="row mt-3">
+        <div class="col-md 9 mx-auto mb-5">
+          <form action="" method="post">
+            {% csrf_token %}
+            <h3 class="mb-4">Iniciar sesion</h3>
+            {% if form.non_field_errors %}
+            <p style="color: red">Usuario o contraseña incorrectos</p>
+            {% endif %}
+            <p>
+              <input
+                type="text"
+                name="username"
+                autofocus
+                maxlength="254"
+                required
+                id="id_username"
+                class="form-control"
+                placeholder="Nombre de usuario"
+              />
+            </p>
+            <p>
+              <input
+                type="password"
+                name="password"
+                required
+                id="id_password"
+                class="form-control"
+                placeholder="contraseña"
+              />
+            </p>
+            <p>
+              <input
+                type="submit"
+                class="btn btn-primary btn-block"
+                value="Acceder"
+              />
+            </p>
+          </form>
         </div>
+      </div>
     </div>
-</body>
+  </body>
 </html>
