arreglando problemas de url

--- a/itbank/home/Templates/index.html
+++ b/itbank/home/Templates/index.html
@@ -80,7 +80,7 @@
           ><span class="material-symbols-outlined"> monetization_on </span
           >Préstamos</a
         >
-        <a id="inversiones" href=""
+        <a id="inversiones" href="http://127.0.0.1:8000/Cuenta/"
           ><span class="material-symbols-outlined"> trending_up </span
           >Inversiones</a
         >
@@ -88,11 +88,11 @@
           ><span class="material-symbols-outlined"> real_estate_agent </span
           >DolarSi</a
         >
-        <a id="ayuda" href=""
+        <a id="ayuda" href="http://127.0.0.1:8000/Cuenta/"
           ><span class="material-symbols-outlined"> support_agent </span
           >Ayuda</a
         >
-        <a id="promos" href="Beneficios/index.html"
+        <a id="promos" href="http://127.0.0.1:8000/Cuenta/"
           ><span class="material-symbols-outlined"> celebration </span
           >Beneficios</a
         >
