Cambiado los forms de "prestamos"

--- a/itbank/home/Templates/index.html
+++ b/itbank/home/Templates/index.html
@@ -23,7 +23,7 @@
   </head>
   <body>
     <header>
-      <nav class="navbar bg-light" style="width: 100%">
+      <nav class="navbar navbar-expand-lg bg-light" style="width: 100%">
         <div class="container-fluid" style="width: 100%">
           <a class="navbar-brand">ITBANK</a>
           {% if request.user.is_authenticated %}
