--- a/itbank/Cuenta/templates/Cuenta/dolarsi.html
+++ b/itbank/Cuenta/templates/Cuenta/dolarsi.html
@@ -75,7 +75,10 @@
         </div>
       </nav>
     </header>
+    <p style="text-align: center;" >Tu saldo es : {{cuenta}}<p></p>
+      
     <div class="container-fluid">
+      
       <h1 class="text-center p-2">Precio del Dolar HOY en Argentina</h1>
       <div class="row m-1">
         <div class="col-4 text-center p-2">
